styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Lilita+One&display=swap');

:root {
  --color-primary: #cc0000;
}

h1,
h2,
h3,
h4 {
  font-family: 'Lilita One', cursive;
}

h5,
h6,
p,
li {
  font-family: 'Lato', sans-serif;
}

* {
  margin: 0;
  padding: 0;
}

/* header */
header {
  width: 100%;
  padding: 1em;
  background-color: var(--color-primary);
  color: #e5e5e5;
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
}
header span {
  font-size: 0.7em;
}

/* main */
ol {
  list-style-type: none;
  width: 50vw;
  margin: 6em auto 1em;
}

.card {
  width: 100%;
  display: grid;
  grid-template-areas: 'date content content image';
  grid-template-columns: repeat(4, 1fr);
  padding: 1.5em 0;
  border-bottom: 1px solid #ccc;
}
/* li:first-child > .card {
  border-top: 1px solid #ccc;
} */

.date {
  grid-area: date;
  color: #666;
  font-size: 0.8em;
}
.content {
  grid-area: content;
}
img {
  grid-area: image;
  margin-left: 3em;
  border-radius: 0.3em;
}

.super {
  font-size: 1em;
  color: #555;
  margin-bottom: 1em;
}
.headline {
  margin-bottom: 0.5em;
  color: #222;
}
.sub {
  font-size: 0.8em;
  color: #666;
  margin-top: 2em;
}

/* footer */
footer {
  padding: 3em 0;
}
footer p {
  text-align: center;
  font-size: 0.8em;
  color: #666;
  margin-bottom: 0.3em;
}

/* media queries */
@media screen and (max-width: 1700px) {
  ol {
    width: 60vw;
  }
}

@media screen and (max-width: 1400px) {
  ol {
    width: 70vw;
  }
}

@media screen and (max-width: 1200px) {
  ol {
    width: 80vw;
  }
}

@media screen and (max-width: 1050px) {
  ol {
    width: 90vw;
  }
}

@media screen and (max-width: 850px) {
  .card {
    grid-template-areas:
      'date date date image'
      'content content content image';
    grid-template-columns: repeat(4, 1fr);
  }
  .date {
    height: 1em;
    margin-bottom: 0.5em;
  }
}

@media screen and (max-width: 750px) {
  .card {
    grid-template-areas:
      'date date image'
      'content content image';
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (max-width: 700px) {
  ol {
    width: 70vw;
  }
  .card {
    grid-template-areas:
      'date'
      'image'
      'content';
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3 1fr);
  }
  img {
    margin: 1em 0;
    width: 100%;
  }
}

@media screen and (max-width: 550px) {
  ol {
    width: 80vw;
  }
}

@media screen and (max-width: 400px) {
  ol {
    width: 90vw;
  }
}

